--- a/index.html
+++ b/index.html
@@ -2,51 +2,35 @@
 <html>
   <head>
     <title>Startup</title>
-
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- Note that the below Bootstrap file is a specific version. If you grab the most
     current from Bootstrap website, you will see the button grow transition being a lot faster
-    than in my video. Use whichever style sheet you like best! -->
+    than in my video.  Use whichever style sheet you like best! -->
     <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header class="startup text-center text-white d-flex">
-      <div class="container my-auto">
+      <div class="container d-flex align-items-center h-100">
         <div class="row">
-          <div class="col-lg-12 my-auto">
-            <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
-            </h1>
+          <header class="text-center col-12">
+            <h1><strong>The Biggest Startup Event of The Year</strong></h1>
+          </header>
+          <section class="text-center col-12">
+          <div class="buffer col-12"></div>
             <hr>
-          </div>
-          <div class="col-lg-12 my-auto">
-            <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://gmail.us20.list-manage.com/subscribe/post?u=67194b51728f3fdbd99d4fbed&amp;id=794b115952" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-</div>   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"></div>
-    </div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-          </div>
+              <a href="https://mailchi.mp/e7211ac941f5/jeki-the-saviour">
+                <button class="btn btn-primary btn-xl">Find out more</button>
+              </a>
+          </section>       
         </div>
       </div>
-    </header>
-
   </body>
-
 </html>
